<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="24dp">

        <Button
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/left_button"/>
        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/right_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/parent_check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_check_button"/>
    <Button
        android:id="@+id/call_child_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_child_button"/>

</LinearLayout>